[package]
name = "modem_updater"
version = "0.1.0"
authors = ["Jared Wolff <jared@circuitdojo.com>"]
description = "Utility for updating nRF91 modem firmware"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bin_file = "0.1.1"
chrono = "0.4.39"
env_logger = "0.11.6"
log = "0.4.22"
probe-rs = "0.25.0"
regex = "1.11.1"
tempfile = "3.15.0"
zip = "2.2.2"
